fixed picture stretching for desktop view on details page

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -191,8 +191,11 @@ and (orientation: landscape) {
 
 .adContainer img {
   max-height: 252px;
-  width: initial;
+  /* width: initial; */
   /* margin: 0 4%; */
+  border-radius: 5px;
+  margin-left: 60px;
+  width: 70%;
 }
 
 #adDetail {
@@ -239,7 +242,7 @@ and (orientation: landscape) {
 
 h4.ui.header {
   position: absolute;
-  top: 5%;
+  top: 3%;
   left: 5%;
 }
 
@@ -279,6 +282,10 @@ h4.ui.header {
 #recentAdsHeader {
   font-size: 12px;
   margin: 0;
+}
+
+.content {
+  border-top: none!important;
 }
 
 /* ----------- Samsung S / Mobile ----------- */
